--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mycompany</groupId>
-    <artifactId>hosteria</artifactId>
+    <artifactId>enterprise</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>La Morada - Wicket/Restful/JDO App</name>
@@ -297,22 +297,22 @@
             <!-- this project's own modules -->
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>hosteria-dom</artifactId>
+                <artifactId>enterprise-dom</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>hosteria-fixture</artifactId>
+                <artifactId>enterprise-fixture</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>hosteria-objstore-jdo</artifactId>
+                <artifactId>enterprise-objstore-jdo</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>hosteria-webapp</artifactId>
+                <artifactId>enterprise-webapp</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
